[metadata]
name = napari-ehooke
version = 0.0.11
description = eHooke implementation within napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antmsbrito/napari-ehooke
author = António Brito
author_email = antmsbrito95@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/antmsbrito/napari-ehooke/issues
    Documentation = https://github.com/antmsbrito/napari-ehooke#README.md
    Source Code = https://github.com/antmsbrito/napari-ehooke
    User Support = https://github.com/antmsbrito/napari-ehooke/issues

[options]
packages = find:
install_requires =
    numpy<2.0
    magicgui==0.6.1
    napari[all]
    tensorflow<=2.15.0
    napari-skimage-regionprops
    stardist-napari==2022.12.6
    scikit-learn
    scikit-image>=0.20.0
    pandas
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ehooke = napari_ehooke:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
